--- a/dquest/trds/s2/2_15_pandas_groupby.ipynb
+++ b/dquest/trds/s2/2_15_pandas_groupby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "5      Prof          B             40           41  Male  141500"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "            dtype='int64', length=266)}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,67 +222,67 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>discipline</th>\n",
-       "      <th>salary</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>yrs.service</th>\n",
        "      <th>yrs.since.phd</th>\n",
+       "      <th>yrs.service</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>B</td>\n",
-       "      <td>79750</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>79750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>B</td>\n",
-       "      <td>79800</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>2</td>\n",
        "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>79800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>B</td>\n",
-       "      <td>77700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>77700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>B</td>\n",
-       "      <td>78000</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>78000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>B</td>\n",
-       "      <td>82379</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>3</td>\n",
        "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>82379</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   discipline  salary   sex  yrs.service  yrs.since.phd\n",
-       "3           B   79750  Male            3              4\n",
-       "12          B   79800  Male            2              7\n",
-       "13          B   77700  Male            1              1\n",
-       "14          B   78000  Male            0              2\n",
-       "28          B   82379  Male            3              5"
+       "   discipline  yrs.since.phd  yrs.service   sex  salary\n",
+       "3           B              4            3  Male   79750\n",
+       "12          B              7            2  Male   79800\n",
+       "13          B              1            1  Male   77700\n",
+       "14          B              2            0  Male   78000\n",
+       "28          B              5            3  Male   82379"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "Prof              266            266          266  266     266"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -431,10 +431,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>discipline</th>\n",
-       "      <th>salary</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>yrs.service</th>\n",
        "      <th>yrs.since.phd</th>\n",
+       "      <th>yrs.service</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>salary</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rank</th>\n",
@@ -449,40 +449,40 @@
        "    <tr>\n",
        "      <th>AssocProf</th>\n",
        "      <td>2</td>\n",
-       "      <td>63</td>\n",
-       "      <td>2</td>\n",
-       "      <td>21</td>\n",
        "      <td>24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AsstProf</th>\n",
        "      <td>2</td>\n",
-       "      <td>53</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
        "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Prof</th>\n",
        "      <td>2</td>\n",
-       "      <td>261</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
        "      <td>42</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2</td>\n",
+       "      <td>261</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           discipline  salary  sex  yrs.service  yrs.since.phd\n",
+       "           discipline  yrs.since.phd  yrs.service  sex  salary\n",
        "rank                                                          \n",
-       "AssocProf           2      63    2           21             24\n",
-       "AsstProf            2      53    2            7             11\n",
-       "Prof                2     261    2           50             42"
+       "AssocProf           2             24           21    2      63\n",
+       "AsstProf            2             11            7    2      53\n",
+       "Prof                2             42           50    2     261"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -525,32 +525,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>rank</td>\n",
-       "      <td>47</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>discipline</td>\n",
-       "      <td>41</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>yrs.since.phd</td>\n",
-       "      <td>39</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>yrs.service</td>\n",
-       "      <td>32</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>sex</td>\n",
-       "      <td>49</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>salary</td>\n",
-       "      <td>40</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -558,15 +558,15 @@
       ],
       "text/plain": [
        "           index  N Mising Values\n",
-       "0           rank               47\n",
-       "1     discipline               41\n",
-       "2  yrs.since.phd               39\n",
-       "3    yrs.service               32\n",
-       "4            sex               49\n",
-       "5         salary               40"
+       "0           rank               50\n",
+       "1     discipline               37\n",
+       "2  yrs.since.phd               38\n",
+       "3    yrs.service               45\n",
+       "4            sex               45\n",
+       "5         salary               44"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,88 +579,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rank</th>\n",
-       "      <th>discipline</th>\n",
-       "      <th>yrs.since.phd</th>\n",
-       "      <th>yrs.service</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>salary</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rank</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AssocProf</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>19</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AsstProf</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Prof</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>42</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2</td>\n",
-       "      <td>208</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           rank  discipline  yrs.since.phd  yrs.service  sex  salary\n",
-       "rank                                                                \n",
-       "AssocProf     1           2             19           16    2      48\n",
-       "AsstProf      1           2             10            7    2      44\n",
-       "Prof          1           2             42           46    2     208"
+       "(           rank  discipline  yrs.since.phd  yrs.service  sex  salary\n",
+       " rank                                                                \n",
+       " AssocProf     1           2             20           17    2      51\n",
+       " AsstProf      1           2             10            7    2      39\n",
+       " Prof          1           2             39           47    2     205,)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,92 +603,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>discipline</th>\n",
-       "      <th>yrs.since.phd</th>\n",
-       "      <th>yrs.service</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>salary</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rank</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AssocProf</th>\n",
-       "      <td>48</td>\n",
-       "      <td>48</td>\n",
-       "      <td>48</td>\n",
-       "      <td>48</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AsstProf</th>\n",
-       "      <td>53</td>\n",
-       "      <td>57</td>\n",
-       "      <td>56</td>\n",
-       "      <td>52</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Prof</th>\n",
-       "      <td>216</td>\n",
-       "      <td>212</td>\n",
-       "      <td>216</td>\n",
-       "      <td>206</td>\n",
-       "      <td>212</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           discipline  yrs.since.phd  yrs.service  sex  salary\n",
-       "rank                                                          \n",
-       "AssocProf          48             48           48   48      48\n",
-       "AsstProf           53             57           56   52      55\n",
-       "Prof              216            212          216  206     212"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +665,7 @@
        "2       Prof  126772.109023"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +748,7 @@
        "2       Prof  126772.109023  123321.5  27718.674999  57800  231545"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,6 +756,31 @@
    "source": [
     "#several funcs in 1 go\n",
     "df_rank['salary'].agg(['mean', 'median','std', 'min', 'max']).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rank\n",
+       "AssocProf     93876.437500\n",
+       "AsstProf      80775.985075\n",
+       "Prof         126772.109023\n",
+       "Name: salary, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##szi test\n",
+    "df_rank['salary'].mean()"
    ]
   },
   {
