--- a/python/py_bokeh/vizbokeh/nb/ch3/ch3_iris_columnar_datasource.ipynb
+++ b/python/py_bokeh/vizbokeh/nb/ch3/ch3_iris_columnar_datasource.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,20 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/zimine/GoogleDriveSlzdev/zrepos/slzdevsnp/learn/compsci/python/py_bokeh/vizbokeh/nb/ch3/iris_nb.html'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#Define the output file path\n",
@@ -67,7 +56,8 @@
     "    color=\"color\", line_dash=[5,3], legend=ds[k]['label'], source=ds[k]['dsrc']) #calls columnDataSource\n",
     "\n",
     "#Save and show the figure\n",
-    "save(f)"
+    "show(f)\n",
+    "#save(f)"
    ]
   },
   {
