--- a/python/py_bokeh/vizbokeh/nb/ch2/iris_styling.ipynb
+++ b/python/py_bokeh/vizbokeh/nb/ch2/iris_styling.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importing libraries\n",
+    "from pprint import pprint as pp\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.io import output_notebook, output_file, show,save\n",
     "from bokeh.sampledata.iris import flowers"
@@ -14,71 +15,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "      <th>species</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   sepal_length  sepal_width  petal_length  petal_width species\n",
-       "0           5.1          3.5           1.4          0.2  setosa\n",
-       "1           4.9          3.0           1.4          0.2  setosa"
+       "'/Users/zimine/GoogleDriveSlzdev/zrepos/slzdevsnp/clearn/python/py_bokeh/vizbokeh'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flowers.head(2)"
+    "import os \n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal_length  sepal_width  petal_length  petal_width species\n0           5.1          3.5           1.4          0.2  setosa\n1           4.9          3.0           1.4          0.2  setosa\n2           4.7          3.2           1.3          0.2  setosa\n3           4.6          3.1           1.5          0.2  setosa\n4           5.0          3.6           1.4          0.2  setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp(flowers.head(5))"
    ]
   },
   {
@@ -90,16 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/zimine/GoogleDriveSlzdev/zrepos/slzdevsnp/learn/compsci/python/py_bokeh/vizbokeh/nb/ch2/iris.html'"
+       "'/Users/zimine/GoogleDriveSlzdev/zrepos/slzdevsnp/clearn/python/py_bokeh/vizbokeh/iris.html'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,22 +84,23 @@
     "f.circle(x=flowers[\"petal_length\"],\\\n",
     "         y=flowers[\"petal_width\"])\n",
     "\n",
-    "#Save and show the figure\n",
-    "save(f)"
+    "#Save and show the figures\n",
+    "save(f)\n",
+    "#show(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/zimine/GoogleDriveSlzdev/zrepos/slzdevsnp/learn/compsci/python/py_bokeh/vizbokeh/nb/ch2/iris.html'"
+       "'/Users/zimine/GoogleDriveSlzdev/zrepos/slzdevsnp/clearn/python/py_bokeh/vizbokeh/iris.html'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,17 +126,30 @@
     "f.circle(x=flowers[\"petal_length\"],\\\n",
     "         y=flowers[\"petal_width\"])\n",
     "\n",
-    "save(f)"
+    "\n",
+    "save(f)\n",
+    "#show(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bokeh.plotting.figure.Figure"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### dir(f) shows the properties of the object f\n",
-    "#dir(f)"
+    "type(f)"
    ]
   },
   {
