algods linked list wip
Former-commit-id: d1dca8cd53401b82bf0cf81d464d7a903eb112b2

--- a/python/py4dsalgoint/szi/ArraysSequences/ArraysSequences.ipynb
+++ b/python/py4dsalgoint/szi/ArraysSequences/ArraysSequences.ipynb
@@ -5,6 +5,9 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "pycharm": {
      "is_executing": false
     }
@@ -16,27 +19,38 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "##### shallow copy of list with immutable objects"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "##### shallow copy of list with immutable objects"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "['aa', 'bb']"
+      "text/plain": [
+       "['aa', 'bb']"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -46,27 +60,28 @@
     "l1[0] = 'zz'\n",
     "l2\n",
     "# we observe that immutable objects are copyied ok with shallow copy"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "##### shallow copy of list of mutable objects"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class Square:\n",
@@ -74,25 +89,28 @@
     "        self._side =side\n",
     "    def __repr__(self):\n",
     "        return str('square:{}'.format(self._side))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[square:11, square:2]\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
@@ -104,37 +122,48 @@
     "l1[0]._side = 11\n",
     "pp(l2)\n",
     "#we observe that l2 is modified"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### dynamic arrays"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### dynamic arrays"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Length: 0; size in bytes: 64\nLength: 1; size in bytes: 96\nLength: 2; size in bytes: 96\nLength: 3; size in bytes: 96\nLength: 4; size in bytes: 96\nLength: 5; size in bytes: 128\nLength: 6; size in bytes: 128\nLength: 7; size in bytes: 128\nLength: 8; size in bytes: 128\nLength: 9; size in bytes: 192\n"
-     ],
-     "output_type": "stream"
+      "Length: 0; size in bytes: 64\n",
+      "Length: 1; size in bytes: 96\n",
+      "Length: 2; size in bytes: 96\n",
+      "Length: 3; size in bytes: 96\n",
+      "Length: 4; size in bytes: 96\n",
+      "Length: 5; size in bytes: 128\n",
+      "Length: 6; size in bytes: 128\n",
+      "Length: 7; size in bytes: 128\n",
+      "Length: 8; size in bytes: 128\n",
+      "Length: 9; size in bytes: 192\n"
+     ]
     }
    ],
    "source": [
@@ -148,17 +177,15 @@
     "    print('Length: {}; size in bytes: {}'.format(a,b))\n",
     "    #increase length by one\n",
     "    data.append(n)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "###### list allocates additional memory in bytes\n",
     "\n",
@@ -168,29 +195,32 @@
     "* reassign reference A to the new array \n",
     "\n",
     "common approach, new array should be 2 x bigger than existing array"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Dynamic array implementation"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Dynamic array implementation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import ctypes\n",
@@ -255,25 +285,31 @@
     "        Returns a new array with new_cap capacity\n",
     "        \"\"\"\n",
     "        return (new_cap * ctypes.py_object)()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "called _resize() curr capacity:1 new capacity:2\ncalled _resize() curr capacity:2 new capacity:4\ncalled _resize() curr capacity:4 new capacity:8\n6\n"
-     ],
-     "output_type": "stream"
+      "called _resize() curr capacity:1 new capacity:2\n",
+      "called _resize() curr capacity:2 new capacity:4\n",
+      "called _resize() curr capacity:4 new capacity:8\n",
+      "6\n"
+     ]
     }
    ],
    "source": [
@@ -285,80 +321,81 @@
     "ar.append(5)\n",
     "ar.append(6)\n",
     "pp(len(ar))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "IndexError('K is out of bounds!')"
+      "text/plain": [
+       "IndexError('K is out of bounds!')"
+      ]
      },
+     "execution_count": 41,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 41
+     "output_type": "execute_result"
     }
    ],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n"
-   ],
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
